[gd_scene load_steps=30 format=2]

[ext_resource path="res://animations/jump.tres" type="Animation" id=1]
[ext_resource path="res://animations/idle.tres" type="Animation" id=2]
[ext_resource path="res://animations/run.tres" type="Animation" id=3]
[ext_resource path="res://animations/fall.tres" type="Animation" id=4]
[ext_resource path="res://scripts/body.gd" type="Script" id=5]
[ext_resource path="res://assets/players/charlotte/hair.png" type="Texture" id=6]
[ext_resource path="res://assets/players/charlotte/eyes.png" type="Texture" id=7]
[ext_resource path="res://assets/players/charlotte/hair2.png" type="Texture" id=8]
[ext_resource path="res://assets/players/charlotte/head.png" type="Texture" id=9]
[ext_resource path="res://assets/players/charlotte/chocolat.png" type="Texture" id=10]
[ext_resource path="res://assets/players/charlotte/untitled.png" type="Texture" id=11]
[ext_resource path="res://scripts/charlotte.gd" type="Script" id=12]
[ext_resource path="res://assets/leg.png" type="Texture" id=13]
[ext_resource path="res://assets/GlacialIndifference-Italic.otf" type="DynamicFontData" id=14]
[ext_resource path="res://assets/players/hand.png" type="Texture" id=15]
[ext_resource path="res://scenes/bars.tscn" type="PackedScene" id=16]
[ext_resource path="res://animations/die.tres" type="Animation" id=17]
[ext_resource path="res://assets/players/charlotte/body.png" type="Texture" id=18]
[ext_resource path="res://scenes/chocolat.tscn" type="PackedScene" id=19]
[ext_resource path="res://assets/players/charlotte/choc_mouth.png" type="Texture" id=20]
[ext_resource path="res://animations/stab.tres" type="Animation" id=21]
[ext_resource path="res://animations/attack.tres" type="Animation" id=22]
[ext_resource path="res://scenes/char_ult.tscn" type="PackedScene" id=23]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.5641, 7.7917 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 39.5306 )

[sub_resource type="DynamicFont" id=3]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=4]
resource_name = "fire"
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite/handR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 38.6787, 11.7249 ), Vector2( 43.4483, -3.11395 ), Vector2( 38.6787, 11.7249 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/handR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/Sprite/handL:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9.9542, 15.1669 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("KinematicBody2D/Sprite/handL:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "gun"
length = 0.05
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite/handL:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9.9542, 15.1669 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/handL:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "ult"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 5.5, 5.7, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, -10 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 5.5, 5.7, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/Sprite/body:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 5.7, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.464579, 4.8883 ), Vector2( 0.464579, 4.8883 ), Vector2( 0.464579, 4.8883 ), Vector2( 0.464579, 4.8883 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("KinematicBody2D/Sprite/body:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 5.7, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("KinematicBody2D/Sprite/head:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 6.6, 6.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.412223, -24.6726 ), Vector2( -2.40108, -24.6726 ), Vector2( -2.40108, -24.6726 ), Vector2( -0.412223, -24.6726 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("KinematicBody2D/Sprite/head:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 6.6, 6.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -7.36547, -7.36547, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("KinematicBody2D/Sprite/handL:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 6.6, 6.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -18.7074, 9.20673 ), Vector2( -25.2326, 12.4693 ), Vector2( -25.2326, 12.4693 ), Vector2( -18.7074, 9.20673 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("KinematicBody2D/Sprite/handL:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3, 6.6, 6.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("KinematicBody2D/Sprite/handR:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.3, 6.6, 6.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 21.3266, 9.69692 ), Vector2( 27.0361, 12.9595 ), Vector2( 27.0361, 12.9595 ), Vector2( 21.3266, 9.69692 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("KinematicBody2D/Sprite/handR:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.3, 6.6, 6.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("KinematicBody2D/Sprite/legL:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.3, 6.6, 6.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8.19322, 23.9495 ), Vector2( -7.39768, 23.9495 ), Vector2( -7.39768, 23.9495 ), Vector2( -8.19322, 23.9495 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("KinematicBody2D/Sprite/legL:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.3, 6.6, 6.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 4.15006, 0.0, 0.0, 4.15006 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("KinematicBody2D/Sprite/legR:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.3, 6.6, 6.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 7.0291, 24.3478 ), Vector2( 5.04025, 23.95 ), Vector2( 5.04025, 23.95 ), Vector2( 7.0291, 24.3478 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("KinematicBody2D/Sprite/legR:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.3, 6.6, 6.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -6.51589, 0.0, 0.0, -6.51589 ]
}

[node name="charlotte" type="Node2D"]
script = ExtResource( 12 )
Ult = ExtResource( 23 )
Chocolat = ExtResource( 19 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=[
"player",
]]
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 5 )
Bars = ExtResource( 16 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]

[node name="body" type="Sprite" parent="KinematicBody2D/Sprite"]
position = Vector2( 0.464579, 4.8883 )
texture = ExtResource( 18 )

[node name="head" type="Sprite" parent="KinematicBody2D/Sprite"]
position = Vector2( -0.412223, -24.6726 )
z_index = 1
texture = ExtResource( 9 )

[node name="eyes" type="Sprite" parent="KinematicBody2D/Sprite/head"]
visible = false
texture = ExtResource( 7 )

[node name="hair" type="Sprite" parent="KinematicBody2D/Sprite/head"]
position = Vector2( -0.345, 13.3 )
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Sprite/head/hair"]
z_index = -5
texture = ExtResource( 8 )

[node name="choc_mouth" type="Sprite" parent="KinematicBody2D/Sprite/head"]
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 20 )

[node name="handL" type="Sprite" parent="KinematicBody2D/Sprite"]
modulate = Color( 0.972549, 0.827451, 0.690196, 1 )
position = Vector2( -18.7074, 9.20673 )
scale = Vector2( 0.5, 0.5 )
z_index = 2
texture = ExtResource( 15 )

[node name="handR" type="Sprite" parent="KinematicBody2D/Sprite"]
modulate = Color( 0.972549, 0.827451, 0.690196, 1 )
self_modulate = Color( 0.972549, 0.87451, 0.690196, 1 )
position = Vector2( 21.3266, 9.69692 )
scale = Vector2( 0.5, 0.5 )
z_index = -3
texture = ExtResource( 15 )

[node name="weapon" type="Area2D" parent="KinematicBody2D/Sprite/handR"]
show_behind_parent = true
position = Vector2( -38.1904, -22.7409 )
scale = Vector2( 2.22222, 2.22222 )
monitoring = false

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Sprite/handR/weapon"]
show_behind_parent = true
position = Vector2( 21.2952, 8.38509 )
rotation = 0.436877
texture = ExtResource( 11 )
offset = Vector2( 2.78225, -22.2975 )
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Sprite/handR/weapon"]
position = Vector2( 32.2916, -10.3299 )
rotation = -1.13229
shape = SubResource( 1 )

[node name="legL" type="Sprite" parent="KinematicBody2D/Sprite"]
self_modulate = Color( 0.184314, 0.290196, 0.333333, 1 )
position = Vector2( -8.19322, 23.9495 )
rotation = 0.0724322
scale = Vector2( 1.1, 1 )
z_index = -1
texture = ExtResource( 13 )

[node name="legR" type="Sprite" parent="KinematicBody2D/Sprite"]
self_modulate = Color( 0.184314, 0.290196, 0.333333, 1 )
position = Vector2( 7.0291, 24.3478 )
rotation = -0.113724
scale = Vector2( 1.1, 1 )
z_index = -2
texture = ExtResource( 13 )

[node name="gun" type="Sprite" parent="KinematicBody2D/Sprite"]
visible = false
position = Vector2( 27.7801, 13.2924 )
rotation = 0.706402
scale = Vector2( 0.7, 0.7 )
z_index = 1
texture = ExtResource( 10 )
hframes = 7

[node name="Position2D" type="Position2D" parent="KinematicBody2D/Sprite"]
position = Vector2( 313.12, -1.37939 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
visible = false
position = Vector2( 0.819758, -4.55816 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="KinematicBody2D"]
margin_left = -101.318
margin_top = -73.7505
margin_right = 98.6824
margin_bottom = -50.7505
custom_fonts/font = SubResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall = ExtResource( 4 )
anims/idle = ExtResource( 2 )
anims/jump = ExtResource( 1 )
anims/run = ExtResource( 3 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/attack = ExtResource( 22 )
anims/die = ExtResource( 17 )
anims/fire = SubResource( 4 )
anims/gun = SubResource( 5 )
anims/stab = ExtResource( 21 )
anims/ult = SubResource( 6 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="UltTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="body_entered" from="KinematicBody2D/Sprite/handR/weapon" to="KinematicBody2D" method="_on_weapon_body_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="UltTimer" to="." method="_on_UltTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="KinematicBody2D" method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
